--- a/src/AppBundle/Resources/views/Admin/view_users.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_users.html.twig
@@ -13,23 +13,57 @@ All Registered Users
 {% endblock actions %}
 
 {% block content %}
-    <div class="col-md-8">
-        <table class="table table-striped">
-            <caption>All Invitations</caption>
+    <div class="col-md-12">
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered table-advance table-hover">
+                <caption>All Users</caption>
             <thead>
             <tr>
                 <th>Name</th>
+                <th>Username</th>
                 <th>Email</th>
+                <th>Location</th>
+                <th>Admin</th>
+                <th>Enabled</th>
+                <th>Last Login</th>
+                <th>Actions</th>
             </tr>
-            {% for emp in users %}
+            </thead>
+                {% for user in users %}
                 <tr>
-                    <th>{{ emp.name |e }} <a href="{{ path('admin_edit_user', {'user_id': emp.id}) }}"><i
-                                    class="fa fa-pencil fa-2x"></i> Edit</a></th>
-                    <th>{{ emp.email |e }}</th>
+                    <th>
+                        {{ user.firstName |e }} {{ user.lastName |e }}
+                    </th>
+                    <th>
+                        {{ user.username }}
+                    </th>
+                    <th>
+                        {{ user.email |e }}
+                    </th>
+                    <th>
+                        {% if user.office %}
+                            {{ user.office.name }}
+                        {% endif %}
+                    </th>
+                    <th>
+                        {{ user.hasRole('ROLE_ADMIN') ? 'Yes' : 'No' }}
+                    </th>
+                    <th>
+                        {{ user.enabled ? 'Yes' : 'No' }}
+                    </th>
+                    <th>
+                        {{ user.lastLogin |date("F jS \\a\\t g:ia") }}
+                    </th>
+                    <th>
+                        <a class="btn btn-default btn-xs purple"
+                           href="{{ path('admin_edit_user', {'user_id': user.id}) }}"><i
+                                    class="fa fa-edit"></i> edit</a>
+                    </th>
                 </tr>
             {% endfor %}
-            </thead>
+
         </table>
+    </div>
     </div>
 
 {% endblock content %}
