--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -108,9 +108,9 @@
                                 <tbody>
                                     <tr ng-repeat="item in cart track by $index">
                                     <div ng-if="angular.isobject(item)">
-                                        <td >{{ item.stock_number }}</td>
-                                        <td >{{ item.description }}</td>
-                                        <td >
+                                        <td style="padding-top: 17px;">{{ item.stock_number }}</td>
+                                        <td style="padding-top: 17px;">{{ item.description }}</td>
+                                        <td  style="padding-top: 17px;">
                                             <div ng-if="item.require_return == 1">
                                                 <center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>
                                              </div>
@@ -126,7 +126,7 @@
                                                     <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
                                                 </button>
                                         </td>
-                           <td>
+                           <td style="padding-top: 17px;">
                                         <div class="row">
                                             <div class="col-md-4">
                                                 <button ng-click="removeItem(item.id)" style="background: transparent; border: none;">
