--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -108,25 +108,27 @@
                                 <tbody>
                                     <tr ng-repeat="item in cart track by $index">
                                     <div ng-if="angular.isobject(item)">
-                                        <td style="padding-top: 17px;">{{ item.stock_number }}</td>
-                                        <td style="padding-top: 17px;">{{ item.description }}</td>
-                                        <td  style="padding-top: 17px;">
+                                        <td style="padding-top: 20px;">{{ item.stock_number }}</td>
+                                        <td style="padding-top: 20px;">{{ item.description }}</td>
+                                        <td  style="padding-top: 20px;">
                                             <div ng-if="item.require_return == 1">
                                                 <center><i class='fa fa-check-circle-o' style='font-size: 25px;color: #e2001a;'></i></center>
                                              </div>
                                         </td>
                                         <td>
-                                           <div ng-repeat="num in item.line_numbers track by $index" style="    display: inline-flex;">
+                                           <div ng-repeat="num in item.line_numbers track by $index" style="display: inline-block;">
                                                 <input ng-model="num" type="text" class="form-control line-number" ng-change="updateLineNumber(num, $index, item.id)" maxlength="4" style="    width: 60px;">
                                            </div>
+                                           <div style="display: inline-flex;">
                                             <button ng-click="removeLineNumber(item.id, $index)" style="background: transparent; border: none;">
                                                     <i class="fa fa-minus" style="font-size: 20px;color: #e2001a;"></i>
                                                 </button>
                                            <button ng-click="addLineNumber($index)" style="background: transparent; border: none;">
                                                     <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
                                                 </button>
+                                                </div>
                                         </td>
-                           <td style="padding-top: 17px;">
+                           <td style="padding-top: 20px;">
                                         <div class="row">
                                             <div class="col-md-4">
                                                 <button ng-click="removeItem(item.id)" style="background: transparent; border: none;">
