--- a/src/AppBundle/Resources/views/User/home.html.twig
+++ b/src/AppBundle/Resources/views/User/home.html.twig
@@ -117,13 +117,13 @@
                                         </td>
                                         <td>
                                            <div ng-repeat="num in item.line_numbers track by $index" style="display: inline-block;">
-                                                <input ng-model="num" type="text" class="form-control line-number" ng-change="updateLineNumber(num, $index, item.id)" maxlength="4" style="    width: 60px;">
+                                                <input ng-model="num.line_number" type="text" class="form-control line-number" ng-change="updateLineNumber(num.id)" maxlength="4" style="width: 60px;">
                                            </div>
                                            <div style="display: inline-flex;">
-                                            <button ng-click="removeLineNumber(item.id, $index)" style="background: transparent; border: none;">
+                                            <button ng-click="removeLineNumber(item.id)" style="background: transparent; border: none;">
                                                     <i class="fa fa-minus" style="font-size: 20px;color: #e2001a;"></i>
                                                 </button>
-                                           <button ng-click="addLineNumber($index)" style="background: transparent; border: none;">
+                                           <button ng-click="addLineNumber(item.id)" style="background: transparent; border: none;">
                                                     <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
                                                 </button>
                                                 </div>
@@ -275,7 +275,7 @@
                         $scope.$apply(function () {
                             $scope.cart = data.cart;
                             $scope.numItems = data.num_items;
-                            console.log(Object.keys($scope.cart).length);
+                            console.log($scope.cart);
                         });
                     }
                 });
@@ -289,7 +289,6 @@
                     success: function (data) {
                         $scope.$apply(function () {
                             $scope.products = data;
-                            console.log($scope.products);
                         });
                     }
                 });
@@ -297,7 +296,6 @@
             $scope.inArray = function (item, array) {
                 return array.indexOf(item);
             };
-
 
             $scope.addItem = function (item) {
                 console.log(item);
@@ -310,10 +308,12 @@
                         $scope.$apply(function () {
                             $scope.cart = data.cart;
                             $scope.numItems = data.num_items;
+                            console.log($scope.cart);
                         });
                     }
                 });
             };
+
             $scope.removeItem = function (item) {
                 $.ajax({
                     type: 'POST',
@@ -329,20 +329,14 @@
                 });
             };
 
-
-
             $scope.addLineNumber = function (item) {
-                $scope.cart[item].line_numbers.push('');
+                console.log(item);
             };
-            $scope.updateLineNumber = function (value, index, item) {
-                tmp = $scope.inArray($scope.products[item], $scope.cart);
-                $scope.cart[tmp].line_numbers[index] = value;
-                console.log($scope.cart[tmp]);
-                console.log($scope.cart);
+            $scope.updateLineNumber = function (item) {
+                console.log(item);
             };
-            $scope.removeLineNumber = function (item, num) {
-                tmp = $scope.inArray($scope.products[item], $scope.cart);
-                $scope.cart[tmp].line_numbers.splice($scope.cart[tmp].line_numbers.length - 1, 1);
+            $scope.removeLineNumber = function (item) {
+                console.log(item);
             };
         });
     </script>
