--- a/src/AppBundle/Resources/views/User/review-order.html.twig
+++ b/src/AppBundle/Resources/views/User/review-order.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Home{% endblock %}
 
-{% block page_title  %}
+{% block page_title %}
 
 
     <style>
@@ -76,24 +76,24 @@
 
 
             <div id="shopping-cart" class="col-md-12">
-            <div class="stats-overview stat-block">
-                <div class="display stat ok huge">
+                <div class="stats-overview stat-block">
+                    <div class="display stat ok huge">
 
-                </div>
-                <div class="details">
-
-                    <div class="numbers">
-                        PRODUCT SHOPPING CART
                     </div>
-                    <hr>
-                    <div class="title" style="padding-bottom: 10px; padding-top: 0px; margin-top: -7px;">
-                        <div ng-if="numItems == 0">
-                            <div style="padding-bottom: 10px; padding-top: 20px;">
-                                No products currently in cart.
-                            </div>
+                    <div class="details">
+
+                        <div class="numbers">
+                            PRODUCT SHOPPING CART
                         </div>
+                        <hr>
+                        <div class="title" style="padding-bottom: 10px; padding-top: 0px; margin-top: -7px;">
+                            <div ng-if="numItems == 0">
+                                <div style="padding-bottom: 10px; padding-top: 20px;">
+                                    No products currently in cart.
+                                </div>
+                            </div>
+                            {% verbatim %}
 <div ng-if="numItems != 0">
-    {% verbatim %}
  <table id="cart-table" class="table table-striped table-bordered" cellspacing="0">
                                 <thead>
                                 <tr>
@@ -151,24 +151,21 @@
                                     </tr>
                             </tbody>
                             </table>
-                            {% endverbatim %}
                             <div class="container">
-                                <button type="button" href="{{ path('review_order') }}" class="btn btn-primary"
-                                        style="float: right;margin-right: 38px;">REVIEW ORDER
-                                </button>
+                                <button type="button" class="btn btn-primary" style="float: right;margin-right: 38px;">REVIEW ORDER</button>
                             </div>
                             </div>
-
+                        {% endverbatim %}
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
             <div class="col-md-12" style="margin-top: 30px;">
                 <div class="stats-overview stat-block">
                     <div class="display stat ok huge">
 
-                </div>
+                    </div>
                     <div class="details">
                         <div class="row">
                             <div class="col-md-3">
@@ -184,12 +181,12 @@
                                     {% endfor %}
                                 </select>
 
-                        </div>
+                            </div>
                             <div class="col-md-4">
                                 <input type="text" class="form-control" id="myInputTextField"
                                        placeholder="Search by product Description or Number">
                             </div>
-                    </div>
+                        </div>
                         <hr>
                         <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
                             <table id="part-table" class="table table-striped  no-footer" cellspacing="0">
@@ -223,13 +220,13 @@
                                             </center>
                                         </td>
                                     </tr>
-                            {% endfor %}
+                                {% endfor %}
                                 </tbody>
                             </table>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </div>
 {% endblock content %}
@@ -270,33 +267,33 @@
             $scope.products = [];
 
 
-                $.ajax({
-                    beforeSend: function () {
-                        console.log('json load cart');
-                    },
-                    type: 'GET',
-                    url: "{{ path('api-load-cart') }}",
-                    success: function (data) {
-                        $scope.$apply(function () {
-                            $scope.cart = data.cart;
-                            $scope.numItems = data.num_items;
-                            console.log($scope.cart);
-                        });
-                    }
-                });
+            $.ajax({
+                beforeSend: function () {
+                    console.log('json load cart');
+                },
+                type: 'GET',
+                url: "{{ path('api-load-cart') }}",
+                success: function (data) {
+                    $scope.$apply(function () {
+                        $scope.cart = data.cart;
+                        $scope.numItems = data.num_items;
+                        console.log($scope.cart);
+                    });
+                }
+            });
 
-                $.ajax({
-                    beforeSend: function () {
-                        console.log('json start');
-                    },
-                    type: 'GET',
-                    url: "{{ path('api-get-products') }}",
-                    success: function (data) {
-                        $scope.$apply(function () {
-                            $scope.products = data;
-                        });
-                    }
-                });
+            $.ajax({
+                beforeSend: function () {
+                    console.log('json start');
+                },
+                type: 'GET',
+                url: "{{ path('api-get-products') }}",
+                success: function (data) {
+                    $scope.$apply(function () {
+                        $scope.products = data;
+                    });
+                }
+            });
 
             $scope.inArray = function (item, array) {
                 return array.indexOf(item);
