--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -37,11 +37,11 @@
                                 <tr>
                                     <th>PRODUCT #</th>
                                     <th>DESCRIPTION</th>
-                                    <th>RETURN REQUIRED</th>
+                                    <th>RETURN</th>
                                     <th>LINE NUMBER (S)</th>
                                     <th>QTY</th>
                                     <th>SHIP QTY</th>
-                                    <th>BACK ORDER QTY</th>
+                                    <th>BO QTY</th>
                                     <th>Notes</th>
                                 </tr>
                                 </thead>
