--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -41,7 +41,7 @@
                                     <th>LINE NUMBER (S)</th>
                                     <th>QTY</th>
                                     <th>SHIP QTY</th>
-                                    <th>BO QTY</th>
+                                    <th>B.O. QTY</th>
                                     <th>Notes</th>
                                 </tr>
                                 </thead>
