--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -32,7 +32,7 @@
                             <div ng-if="numItems != 0">
                                 {% verbatim %}
 <div class="table-responsive">
- <table id="cart-table" class="table table-striped table-bordered" cellspacing="0">
+ <table id="cart-table" class="responsive nowrap table table-striped no-footer" cellspacing="0">
                                 <thead>
                                 <tr>
                                     <th>PRODUCT #</th>
