--- a/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
@@ -108,6 +108,82 @@
         </div>
     </div>
 
+    {% if previously_returned_parts %}
+        <div class="row ">
+            <div class="col-md-12">
+                <div class="portlet">
+                    <div class="portlet-title" style="background-color: #d9edf7 !important;">
+                        <div class="caption">
+                            <i class="fa fa-bell"></i>PARTS THAT HAVE BEEN RETURNED TO USTER
+                        </div>
+                    </div>
+                    <div class="portlet-body">
+                        <div class="table-scrollable">
+                            <table class="table table-striped table-bordered table-hover">
+                                <thead>
+                                <tr>
+                                    <th>DATE SUBMITTED</th>
+                                    <th>DATE RECEIVED</th>
+                                    <th>PART NAME</th>
+                                    <th>STOCK NUMBER</th>
+                                    <th>QUANTITY</th>
+                                    <th>ITEMS SHIPPED</th>
+                                    <th>ITEMS RECEIVED</th>
+                                    <th>OFFICE</th>
+                                    <th>ORDER #</th>
+                                    <th>
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for item in previously_returned_parts %}
+                                    <tr>
+                                        <td>
+                                            {{ item.submit_date | date('m/d/y') }}
+                                        </td>
+                                        <td>{{ item.return_date | date('m/d/y') }}</td>
+                                        <td>
+                                            {{ item.description }}
+                                        </td>
+                                        <td>
+                                            {{ item.stock_number }}
+                                        </td>
+                                        <td>
+                                            <center>
+                                                {{ item.quantity }}
+                                            </center>
+                                        </td>
+                                        <td>
+                                            <center>
+                                                <div id="{{ item.id }}-shipped">
+                                                    {{ item.returned_items_expected_quantity }}
+                                                </div>
+                                            </center>
+                                        </td>
+                                        <td>
+                                            <center>{{ item.returned_items_quantity }}</center>
+                                        </td>
+                                        <td>
+                                            {{ item.office_name ? item.office_name : ' ' }}
+                                        </td>
+                                        <td>
+                                            <center>{{ item.order_number }}</center>
+                                        </td>
+                                        <td style="width: 60px;">
+                                            <a href="{{ path('admin_order_approve', {'cart_id': item.cart_id}) }}"
+                                               class="btn btn-info btn-xs">View Order</a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
 {% endblock content %}
 
 {% block footer %}
